manifests/networking/netpol-hub.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hub-network-policy
  namespace: jupyterhub
spec:
  podSelector:
    matchLabels:
      component: jupyter
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 8081
  egress:
