manifests/networking/netpol-singleuser.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: singleuser-network-policy
  namespace: jupyterhub
spec:
  podSelector:
    matchLabels:
      component: singleuser-server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 8888
  egress:
  - to:
    - podSelector:
        matchLabels:
          component: jupyter
    ports:
    - protocol: TCP
      port: 8081
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - to:    # deny all internal traffic, but allow to reach internet
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
          - 169.254.0.0/16
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80
  - to: # allow ctomerodev
    - ipBlock:
        cidr: 10.6.64.145/32
    ports:
    - protocol: TCP
      port: 4064
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
